--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/aarontkennedy/bamazon#readme",
   "dependencies": {
     "colors": "^1.3.0",
+    "inquirer": "^5.2.0",
     "mysql": "^2.15.0",
-    "prompt": "^1.0.0"
+    "npm": "^6.1.0"
   }
 }
