--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/aarontkennedy/bamazon#readme",
   "dependencies": {
     "colors": "^1.3.0",
+    "console.table": "^0.10.0",
     "inquirer": "^5.2.0",
     "mysql": "^2.15.0",
     "npm": "^6.1.0"
